--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-server.port:9091
+server.port=9095
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+spring.application.name=catalogservice
