--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=9094
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 spring.application.name=catalogservice
+security.oauth2.resource.token-info-uri=http://localhost:9191/oauth/token
