--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,15 @@
 server.port=9094
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 spring.application.name=catalogservice
-security.oauth2.resource.token-info-uri=http://localhost:9191/oauth/token
+security.oauth2.resource.token-info-uri=http://localhost:9191/uaa/oauth/token
+
+eureka.client.fetch-registry=true
+eureka
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
